--- a/.github/workflows/test_new.yml
+++ b/.github/workflows/test_new.yml
@@ -25,19 +25,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '18' # Use the version specified in your project
           cache: 'yarn'
+
+      # Upgrade Expo SDK and dependencies
+      - name: Upgrade Expo SDK
+        run: |
+          npx expo upgrade
 
       # Install dependencies
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
-
-      # Debug: Verify Node.js installation
-      - name: Verify Node.js installation
-        run: |
-          node --version
-          npm --version
 
       # Grant execute permissions to gradlew
       - name: Grant execute permissions to gradlew
