--- a/.github/workflows/test_new.yml
+++ b/.github/workflows/test_new.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   apk:
     name: Generate debug APK
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       # Checkout the repository
